# TermPDF

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs  termpdf.dev.toml.example
.github/workflows/: release.yml
scripts/: fetch_pdfium.sh  package_release.sh
src/: app.rs  cli.rs  document.rs  kitty.rs  layout.rs  lib.rs  main.rs  pdf.rs  pdfium_bundle.rs  platform.rs  render.rs  search.rs  ui.rs
tests/: app_tests.rs  cli_tests.rs  document_tests.rs  kitty_tests.rs  layout_tests.rs  pdf_tests.rs  pdfium_bundle_tests.rs  platform_tests.rs  render_tests.rs  search_tests.rs  ui_tests.rs
tests/common/: mod.rs
