[package]
name = "termpdf"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
flate2 = "1.1.5"
pdfium-render = "0.9.0"
ratatui = "0.30.0"


# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
